css/style.css
body {
  color: #003881;
  background-color: #fdfaff;
  font-family: "Open Sans", "Zen Kaku Gothic New", sans-serif;
}
body h1 {
  font-size: x-large;
  text-align: center;
}
body #contents-tab {
  display: flex;
  flex-direction: column;
}
body #contents-tab section {
  display: flex;
}
body #contents-tab section .tab-title {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 20vw;
  height: 30vh;
  background-color: #fdfaff;
  border-color: #deffb3;
  border-width: 5px;
  border-style: double;
  transition: 500ms;
}
body #contents-tab section .tab-content {
  display: none;
  align-items: center;
  position: fixed;
  left: 20vw;
  top: 0;
  width: 60vw;
  height: 100vh;
}
body #contents-tab section .tab-content p {
  width: 60vw;
  text-align: center;
}
@media screen and (min-width: 1000px) {
  body #contents-tab section:nth-child(odd) {
    display: flex;
    flex-direction: row-reverse;
  }
}
body .draw-tile {
  position: fixed;
  left: 0;
  top: 0;
  z-index: -10000;
  width: 32px;
  height: 32px;
  transition: 100ms;
}
body .draw-tile-odd {
  background-color: #deffb3;
}
body .draw-tile-even {
  border-width: 1px;
  border-color: #deffb3;
  background-color: #fdfaff;
}
body .scroll-guide {
  align-items: center;
  display: flex;
  position: fixed;
  left: 20vw;
  top: 95vh;
  width: 60vw;
}
body .scroll-guide p {
  width: 60vw;
  flex-direction: column-reverse;
  justify-content: flex-end;
  text-align: center;
}/*# sourceMappingURL=style.css.map */

